# AlteryxGalleryAPI

./: .env.example  .gitignore  .windsurfrules  INITIAL-Gemini-export.md  INITIAL.md  PRD.md  Pipfile  README.md  _version.py  hatch.toml  hello.py  initial_prompt.md  issue_example.py  planning.md  pyproject.old.toml  pyproject.toml  quick_test.py  requirements.txt  ruff.toml  scratch.ipynb  scratch.py  setup.cfg  setup.cfg.old  setup.py  tasks.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: copilot-instructions.md
.github/prompts/: execute-prp.prompt.md
.github/workflows/: branch-updates.yml  python-package-conda.yml  python-package.yml
src/: scratch.py
src/AlteryxGallery/: AlteryxGalleryAPI.py  GalleryConnection.py
src/AlteryxGallery/api_connections/: admin.py  gallery.py
src/AlteryxGalleryAPI.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/Alteryx_Gallery/: gallery_connection.py
src/Alteryx_Gallery/api_connections/: admin.py  gallery.py  subscription.py
src/alteryx_gallery_api/: __init__.py  client.py  exceptions.py
src/alteryx_gallery_api/models/: __init__.py  auth.py  base.py  common.py  workflows.py
src/alteryx_server_py/: __init__.py  _base_client.py  async_client.py  auth.py  client.py  config.py  exceptions.py
src/alteryx_server_py/models/: __init__.py  auth.py  base.py  collections.py  common.py  credentials.py  jobs.py  schedules.py  server.py  users.py  workflows.py
src/alteryx_server_py/resources/: __init__.py  _base.py  collections.py  credentials.py  jobs.py  schedules.py  server.py  user_groups.py  users.py  workflows.py
src/alteryx_server_py/utils/: __init__.py  file_utils.py  pagination.py  retry.py
src/archive_AlteryxGallery/: AlteryxGalleryAPI.py
tests/: Test_Upload.yxzp  admin_test.py  archive_test_gallery_connection.py  conftest.py  gallery_test.py  subscription_test.py  test_client.py  test_gallery_connection.py
tests/integration/: test_live_client.py
tests/unit/: test_client_get_workflows_models.py  test_collection_resource.py  test_credential_resource.py  test_env_loading.py  test_exceptions.py  test_job_resource.py  test_retry.py  test_schedule_resource.py  test_server_resource.py  test_user_group_resource.py  test_user_resource.py  test_workflows.py
tests/unit/models/: test_collections_model.py  test_credentials_model.py  test_schedules_model.py  test_users_model.py  test_workflows_model.py
