[project]
name = "alteryxgalleryapi"
authors = [
    {name = "Paul Houghton", email = "paul.houghton@theinformationlab.co.uk"}
]
# dynamic = ["version"]
version = "0.1.0"
description = "An API wrapper for connecting to an Alteryx Gallery. Forked from the project by DAVID PRYOR, NICK SIMMONS, AND RITU GOWLIKAR"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
keywords = ["Alteryx Server", "Atleryx Gallery", "Alteryx Gallery API", "Alteryx Server API", "Alteryx API"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Networking",
]

dependencies = [
    "requests>=2.25.1,<3.0.0",
    "requests-oauthlib>=1.3.0,<2.0.0",
    "python-dotenv>=1.1.0",
    "requests-oauthlib>=1.3.1",
]

[dependency-groups]
dev = [
    "hatch-vcs>=0.4.0",
    "hatch>=1.13.0",
    "pytest>=8.3.3",
    "ruff>=0.8.0",
    "pytest-cov>=6.0.0",
    "responses>=0.25.7",
]

[project.urls]
"API Documentation" = "https://help.alteryx.com/current/en/server/api-overview/alteryx-server-api-v3.html"
"Repository" = "https://github.com/Sivivatu/AlteryxGalleryAPI"
"Bug Tracker" = "https://github.com/Sivivatu/AlteryxGalleryAPI/issues"

[tool.pytest.ini_options]
# addopts = "--cov=AlteryxGallery --cov-report=term-missing"
pythonpath = ["src"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/alteryx_gallery_api"]
