[project]
name = "alteryxgalleryapi"
version = "0.1.0"
description = "An API for connecting to an Alteryx Gallery. Forked from the project by DAVID PRYOR, NICK SIMMONS, AND RITU GOWLIKAR"
authors = [
    { name = "Paul Houghton", email = "paul.houghton@theinformationlab.co.uk" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.8"
keywords = ["Alteryx Server", "Atleryx Gallery", "API", "Alteryx Gallery API", "Alteryx Server API", "Alteryx API"]
dependencies = [
    "python-dotenv>=1.0.1",
    "requests>=2.31.0",
]

[project.urls]
Repository = "https://github.com/Sivivatu/AlteryxGalleryAPI"
"API Documentation" = "https://help.alteryx.com/current/en/server/api-overview/alteryx-server-api-v3.html"
"Bug Tracker" = "https://github.com/Sivivatu/AlteryxGalleryAPI/issues"

[project.optional-dependencies]
dev = [
    "ruff>=0.3.4",
    "pytest>=8.1.1",
    "ipykernel>=6.29.4",
]

[tool.hatch.build.targets.wheel]
packages = ["src/AlteryxGallery"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
