[metadata]
name = AlteryxGalleryAPI
version = 0.0.9
author = Paul Houghton
author_email = paul.houghton@theinformationlab.co.uk
description = An API for connecting to an Alteryx Gallery, Forked from the project by DAVID PRYOR, NICK SIMMONS, AND RITU GOWLIKAR"
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Sivivatu/AlteryxGalleryAPI
project_urls =
	API Documentation = https://gallery.alteryx.com/api-docs/
    Bug Tracker = https://github.com/Sivivatu/AlteryxGalleryAPI/issues
    Source = https://github.com/Sivivatu/AlteryxGalleryAPI
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha

[options]
packages = find:
package_dir =
    = src
install_requires =
    requests
python_requires = >=3.8

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
Alteryx_Gallery = py.typed

[flake8]
max-line-length = 160